--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.8.10"
+    ext.kotlin_version = "1.8.20"
     repositories {
         google()
         mavenCentral()
@@ -18,6 +18,7 @@ buildscript {
 
 plugins {
     id 'com.google.dagger.hilt.android' version '2.44' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
 }
 
 allprojects {
